move grafana out of kps for simplicity

--- a/apps/base/gatus/release/helmrelease.yaml
+++ b/apps/base/gatus/release/helmrelease.yaml
@@ -78,13 +78,13 @@ spec:
             - "[BODY].database == ok"
         - name: AlertManager
           group: Observability
-          url: http://kube-prometheus-stack-alertmanager.kube-prometheus-stack:9093/-/healthy
+          url: http://kps-alertmanager.kube-prometheus-stack:9093/-/healthy
           conditions:
             - "[STATUS] <= 299"
             - "[BODY] == OK"
         - name: Prometheus
           group: Observability
-          url: http://kube-prometheus-stack-prometheus.kube-prometheus-stack:9090/-/healthy
+          url: http://kps-prometheus.kube-prometheus-stack:9090/-/healthy
           conditions:
             - "[STATUS] <= 299"
             - "[BODY] == Prometheus Server is Healthy."
