--- a/apps/base/kube-prometheus-stack/release/helmrelease.yaml
+++ b/apps/base/kube-prometheus-stack/release/helmrelease.yaml
@@ -30,149 +30,11 @@ spec:
                 requests:
                   storage: 1Gi
 
-    # Managed in standalone chart
     grafana:
-      enabled: true
-      serviceMonitor:
-        enabled: true
-      persistence:
-        enabled: false
-      envFromSecrets:
-        - name: grafana-oidc
-      grafana.ini:
-        server:
-          root_url: https://grafana.j6n.dev
-        # OIDC
-        auth:
-          signout_redirect_url: https://auth.j6n.ca/application/o/grafana/end-session/
-          disable_login_form: true
-          oauth_allow_insecure_email_lookup: true
-
-        auth.generic_oauth:
-          name: authentik
-          enabled: true
-          scopes: openid email profile
-          auth_url: https://auth.j6n.ca/application/o/authorize/
-          token_url: https://auth.j6n.ca/application/o/token/
-          api_url: https://auth.j6n.ca/application/o/userinfo/
-          # Map user groups to Grafana roles
-          role_attribute_path: contains(groups[*], 'grafana_admin') && 'Admin' || contains(groups[*], 'grafana_editor') && 'Editor' || 'Viewer'
-        # Enable public viewer
-        auth.anonymous:
-          enabled: true
-          org_name: Main Org.
-          org_role: Viewer
-          hide_version: true
-      # Use an existing secret for the admin user.
-      admin:
-        ## Name of the secret. Can be templated.
-        existingSecret: "grafana-admin"
-        userKey: admin_user
-        passwordKey: admin_password
-      # Plugins
-      plugins: []
-
-      ## Configure grafana datasources
-      ## ref: http://docs.grafana.org/administration/provisioning/#datasources
-      # datasources:
-      #   datasources.yaml:
-      #     apiVersion: 1
-      #     datasources:
-      #     - name: Prometheus
-      #       type: prometheus
-      #       url: http://prometheus-server.prometheus
-      #       access: proxy
-      #       isDefault: true
-
-      ## NOTE: To use dashboards you must also enable/configure dashboardProviders
-      ## ref: https://grafana.com/dashboards
-      ## dashboards per provider, use provider name as key.
-      dashboardProviders:
-        dashboardproviders.yaml:
-          apiVersion: 1
-          providers:
-            - name: default
-              orgId: 1
-              folder: ""
-              type: file
-              disableDeletion: false
-              editable: true
-              options:
-                path: /var/lib/grafana/dashboards/default
-            - name: system
-              orgId: 1
-              folder: System
-              type: file
-              disableDeletion: false
-              editable: true
-              options:
-                path: /var/lib/grafana/dashboards/system      
-            - name: kubernetes
-              orgId: 1
-              folder: Kubernetes
-              type: file
-              disableDeletion: false
-              editable: true
-              options:
-                path: /var/lib/grafana/dashboards/kubernetes
-            - name: network
-              orgId: 1
-              folder: Network
-              type: file
-              disableDeletion: false
-              editable: true
-              options:
-                path: /var/lib/grafana/dashboards/network
-            - name: storage
-              orgId: 1
-              folder: Storage
-              type: file
-              disableDeletion: false
-              editable: true
-              options:
-                path: /var/lib/grafana/dashboards/storage
-            - name: database
-              orgId: 1
-              folder: Database
-              type: file
-              disableDeletion: false
-              editable: true
-              options:
-                path: /var/lib/grafana/dashboards/database
-      dashboards:
-        storage:
-          longhorn:
-            gnetId: 16888
-            revision: 9
-            datasource: Prometheus
-        # system:
-        #   gatus:
-        #     url: https://raw.githubusercontent.com/j6nca/homelab-cluster/refs/heads/main/dashboards/system/gatus.json
-        #     datasource: Prometheus
-        # network:
-        #   cloudflared:
-        #     gnetId: 17457
-        #     revision: 6
-        #     datasource: Prometheus
-        
-      sidecar:
-        dashboards:
-          enabled: true
-          label: grafana_dashboard
-          labelValue: "1"
-          searchNamespace: ALL
-          # Store default dashboards in 'Kubernetes' folder. A lot of these are defaults already but this gives better visibility
-          # of their settings in such a complex chart.
-          # Ref: https://github.com/grafana/helm-charts/issues/527#issuecomment-982319638
-          annotations:
-            grafana_folder: Kubernetes
-          folderAnnotation: grafana_folder
-          folder: /tmp/dashboards
-          provider:
-            allowUiUpdates: true
-            foldersFromFilesStructure: true
+      enabled: false
       defaultDashboardsTimezone: 'America/Toronto'
-      forceDeployDashboards: false
+      # Deploy grafana dashboards associated with this chart
+      forceDeployDashboards: true
       defaultDashboardsEnabled: true
 
     kubeStateMetrics:
