fix prometheus endpoint, add alertmanager datasource

--- a/apps/base/grafana/release/helmrelease.yaml
+++ b/apps/base/grafana/release/helmrelease.yaml
@@ -60,9 +60,18 @@ spec:
         datasources:
         - name: Prometheus
           type: prometheus
-          url: http://ksp-prometheus.kube-prometheus-stack:9090
+          url: http://kps-prometheus.kube-prometheus-stack:9090
           access: proxy
           isDefault: true
+        - name: AlertManager
+          type: alertmanager
+          url: http://kps-alertmanager.kube-prometheus-stack:9093
+          access: proxy
+          jsonData:
+            # Valid options for implementation include mimir, cortex and prometheus
+            implementation: prometheus
+            # Whether or not Grafana should send alert instances to this Alertmanager
+            handleGrafanaManagedAlerts: false
 
     ## NOTE: To use dashboards you must also enable/configure dashboardProviders
     ## ref: https://grafana.com/dashboards
