--- a/apps/base/grafana/release/externalsecrets.yaml
+++ b/apps/base/grafana/release/externalsecrets.yaml
@@ -49,3 +49,44 @@ spec:
     remoteRef:
       key: grafana-admin
       property: password
+---
+apiVersion: external-secrets.io/v1
+kind: ExternalSecret
+metadata:
+  name: grafana-datasources
+spec:
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: onepassword
+  target:
+    creationPolicy: Owner
+    # this is how the Kind=Secret will look like
+    template:
+      labels:
+        grafana_datasource: 'true' # default value for: sidecar.datasources.label
+      data:
+        admin_user: "{{ .admin_user }}"
+        admin_password: "{{ .admin_password }}"
+
+      stringData:
+          strava.yaml: |-
+            apiVersion: 1
+            datasources:
+            - name: Strava
+              type: strava
+              secureJsonData:
+                client_id: '{{ .client_id }}
+                client_secret: '{{ .client_secret }}
+              jsonData:
+                # <bool> allow users to edit datasources from the UI.
+                editable: false
+
+  data:
+  - secretKey: client_id
+    remoteRef:
+      key: strava-app
+      property: client_id
+  - secretKey: client_secret
+    remoteRef:
+      key: strava-app
+      property: client_secret
