--- a/apps/base/grafana/release/externalsecrets.yaml
+++ b/apps/base/grafana/release/externalsecrets.yaml
@@ -62,12 +62,9 @@ spec:
     creationPolicy: Owner
     # this is how the Kind=Secret will look like
     template:
-      labels:
-        grafana_datasource: 'true' # default value for: sidecar.datasources.label
-      data:
-        admin_user: "{{ .admin_user }}"
-        admin_password: "{{ .admin_password }}"
-
+      metadata:
+        labels:
+          grafana_datasource: 'true' # default value for: sidecar.datasources.label
       stringData:
           strava.yaml: |-
             apiVersion: 1
@@ -75,10 +72,9 @@ spec:
             - name: Strava
               type: strava
               secureJsonData:
-                client_id: '{{ .client_id }}
-                client_secret: '{{ .client_secret }}
+                client_id: "{{ .client_id }}"
+                client_secret: "{{ .client_secret }}"
               jsonData:
-                # <bool> allow users to edit datasources from the UI.
                 editable: false
 
   data:
