--- a/apps/base/grafana/release/externalsecrets.yaml
+++ b/apps/base/grafana/release/externalsecrets.yaml
@@ -65,7 +65,7 @@ spec:
       metadata:
         labels:
           grafana_datasource: 'true' # default value for: sidecar.datasources.label
-      stringData:
+      data:
           strava.yaml: |-
             apiVersion: 1
             datasources:
