fix datasource type

--- a/apps/base/grafana/release/externalsecrets.yaml
+++ b/apps/base/grafana/release/externalsecrets.yaml
@@ -70,7 +70,7 @@ spec:
             apiVersion: 1
             datasources:
             - name: Strava
-              type: strava
+              type: Strava
               secureJsonData:
                 client_id: "{{ .client_id }}"
                 client_secret: "{{ .client_secret }}"
