make datasource editable

--- a/apps/base/grafana/release/externalsecrets.yaml
+++ b/apps/base/grafana/release/externalsecrets.yaml
@@ -75,7 +75,7 @@ spec:
                 client_id: "{{ .client_id }}"
                 client_secret: "{{ .client_secret }}"
               jsonData:
-                editable: false
+                editable: true
 
   data:
   - secretKey: client_id
