--- a/apps/base/grafana/release/externalsecrets.yaml
+++ b/apps/base/grafana/release/externalsecrets.yaml
@@ -71,8 +71,9 @@ spec:
             datasources:
             - name: Strava
               type: grafana-strava-datasource
-              client_id: "{{ .client_id }}"
-              client_secret: "{{ .client_secret }}"
+              secureJsonData:
+                client_id: "{{ .client_id }}"
+                client_secret: "{{ .client_secret }}"
               editable: true
 
   data:
