--- a/apps/base/cloudflare-tunnel/release/helmrelease.yaml
+++ b/apps/base/cloudflare-tunnel/release/helmrelease.yaml
@@ -1,11 +1,11 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: cloudflare-tunnel
+  name: &app cloudflare-tunnel
 spec:
   chart:
     spec:
-      chart: cloudflare-tunnel
+      chart: *app
       sourceRef:
         kind: HelmRepository
         name: cloudflare
