--- a/apps/base/victoria-metrics/kustomize.yaml
+++ b/apps/base/victoria-metrics/kustomize.yaml
@@ -1,13 +1,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: victoria-metrics
+  name: &app victoria-metrics
   namespace: flux-system
 spec:
-  targetNamespace: kube-system
+  targetNamespace: *app
   commonMetadata:
     labels:
-      service: victoria-metrics
+      service: *app
   interval: 5m
   path: ./apps/base/victoria-metrics/release
   prune: true
