--- a/apps/base/grafana/release/helmrelease.yaml
+++ b/apps/base/grafana/release/helmrelease.yaml
@@ -65,16 +65,27 @@ spec:
       datasources.yaml:
         apiVersion: 1
         datasources:
-        - name: Prometheus
+        # - name: Prometheus
+        #   type: prometheus
+        #   uid: prometheus
+        #   url: http://kps-prometheus.kube-prometheus-stack:9090
+        #   access: proxy
+        #   isDefault: true
+        # - name: AlertManager
+        #   type: alertmanager
+        #   uid: alertmanager
+        #   url: http://kps-alertmanager.kube-prometheus-stack:9093
+        #   access: proxy
+        - name: VictoriaMetrics
           type: prometheus
           uid: prometheus
-          url: http://kps-prometheus.kube-prometheus-stack:9090
+          url: http://<vmselect-addr>.observability:8481/select/<tenant>/prometheus
           access: proxy
           isDefault: true
         - name: AlertManager
           type: alertmanager
           uid: alertmanager
-          url: http://kps-alertmanager.kube-prometheus-stack:9093
+          url: http://vmalertmanager-victoria-metrics-k8s-stack.observability:8481/select/<tenant>/prometheus
           access: proxy
           jsonData:
             # Valid options for implementation include mimir, cortex and prometheus
