--- a/apps/base/victoria-metrics-k8s-stack/kustomize.yaml
+++ b/apps/base/victoria-metrics-k8s-stack/kustomize.yaml
@@ -4,12 +4,12 @@ metadata:
   name: &app victoria-metrics
   namespace: flux-system
 spec:
-  targetNamespace: *app
+  targetNamespace: observability
   commonMetadata:
     labels:
       service: *app
   interval: 5m
-  path: ./apps/base/victoria-metrics/release
+  path: ./apps/base/victoria-metrics-k8s-stack/release
   prune: true
   sourceRef:
     kind: GitRepository
