--- a/apps/base/victoria-metrics-operator/kustomize.yaml
+++ b/apps/base/victoria-metrics-operator/kustomize.yaml
@@ -1,15 +1,15 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app alertmanager
+  name: &app victoria-metrics-operator
   namespace: flux-system
 spec:
-  targetNamespace: observability
+  targetNamespace: *app
   commonMetadata:
     labels:
       service: *app
   interval: 5m
-  path: ./apps/base/alertmanager/release
+  path: ./apps/base/victoria-metrics-operator/release
   prune: true
   sourceRef:
     kind: GitRepository
