--- a/apps/base/victoria-metrics-k8s-stack/release/helmrelease.yaml
+++ b/apps/base/victoria-metrics-k8s-stack/release/helmrelease.yaml
@@ -1,7 +1,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app victoria-metrics-k8s-stack
+  name: &app vmks
 spec:
   chart:
     spec:
