--- a/apps/base/grafana-operator/kustomize.yaml
+++ b/apps/base/grafana-operator/kustomize.yaml
@@ -14,3 +14,22 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: grafana
+  namespace: flux-system
+spec:
+  targetNamespace: observability
+  commonMetadata:
+    labels:
+      service: grafana
+  dependsOn:
+    - name: grafana-operator
+  interval: 5m
+  path: ./apps/base/grafana-operator/grafana
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
