--- a/apps/base/grafana-operator/grafana/externalsecrets.yaml
+++ b/apps/base/grafana-operator/grafana/externalsecrets.yaml
@@ -37,8 +37,8 @@ spec:
     # this is how the Kind=Secret will look like
     template:
       data:
-        admin_user: "{{ .admin_user }}"
-        admin_password: "{{ .admin_password }}"
+        GF_SECURITY_ADMIN_USER: "{{ .admin_user }}"
+        GF_SECURITY_ADMIN_PASSWORD: "{{ .admin_password }}"
 
   data:
   - secretKey: admin_user
