--- a/apps/base/grafana-operator/grafana/grafana.yaml
+++ b/apps/base/grafana-operator/grafana/grafana.yaml
@@ -21,21 +21,21 @@ spec:
       disable_login_form: "true"
       oauth_allow_insecure_email_lookup: "true"
 
-      generic_oauth:
-        name: "authentik"
-        enabled: "true"
-        scopes: "openid email profile"
-        auth_url: "https://auth.j6n.ca/application/o/authorize/"
-        token_url: "https://auth.j6n.ca/application/o/token/"
-        api_url: "https://auth.j6n.ca/application/o/userinfo/"
-        # Map user groups to Grafana roles
-        role_attribute_path: "contains(groups[*], 'grafana_admin') && 'Admin' || contains(groups[*], 'grafana_editor') && 'Editor' || 'Viewer'"
-      # Enable public viewer
-      anonymous:
-        enabled: "true"
-        org_name: "Main Org."
-        org_role: "Viewer"
-        hide_version: "true"
+    auth.generic_oauth:
+      name: "authentik"
+      enabled: "true"
+      scopes: "openid email profile"
+      auth_url: "https://auth.j6n.ca/application/o/authorize/"
+      token_url: "https://auth.j6n.ca/application/o/token/"
+      api_url: "https://auth.j6n.ca/application/o/userinfo/"
+      # Map user groups to Grafana roles
+      role_attribute_path: "contains(groups[*], 'grafana_admin') && 'Admin' || contains(groups[*], 'grafana_editor') && 'Editor' || 'Viewer'"
+    # Enable public viewer
+    auth.anonymous:
+      enabled: "true"
+      org_name: "Main Org."
+      org_role: "Viewer"
+      hide_version: "true"
 
     feature_toggles:
       externalServiceAccounts: "true"
