--- a/apps/base/cloudflare-tunnel/release/helmrelease.yaml
+++ b/apps/base/cloudflare-tunnel/release/helmrelease.yaml
@@ -25,6 +25,6 @@ spec:
         - hostname: gatus.j6n.dev
           service: http://gatus.gatus.svc.cluster.local:80
         - hostname: grafana.j6n.dev
-          service: http://grafana.grafana.svc.cluster.local:80
+          service: http://grafana-service.observability.svc.cluster.local:80
     replicaCount: 1
         
