--- a/apps/base/victoria-metrics-k8s-stack/kustomize.yaml
+++ b/apps/base/victoria-metrics-k8s-stack/kustomize.yaml
@@ -16,3 +16,22 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: &storage victoria-metrics
+  namespace: flux-system
+spec:
+  targetNamespace: observability
+  commonMetadata:
+    labels:
+      service: *app
+  dependsOn:
+    - name: *app
+  interval: 5m
+  path: ./apps/base/victoria-metrics-k8s-stack/storage
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
