--- a/apps/base/victoria-metrics-k8s-stack/storage/externalsecrets.yaml
+++ b/apps/base/victoria-metrics-k8s-stack/storage/externalsecrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: victoria-metrics-replication
+  name: vmks-replication
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
@@ -10,7 +10,7 @@ spec:
     creationPolicy: Owner
     template:
       data:
-        RESTIC_REPOSITORY: s3:{{ .bucket_endpoint | toString }}/victoria-metrics
+        RESTIC_REPOSITORY: s3:{{ .bucket_endpoint | toString }}/vmks
         RESTIC_PASSWORD: "{{ .restic_password | toString }}"
         AWS_ACCESS_KEY_ID: "{{ .cf_access_key_id | toString }}"
         AWS_SECRET_ACCESS_KEY: "{{ .cf_access_key_secret | toString }}"
