--- a/apps/base/victoria-metrics-k8s-stack/kustomize.yaml
+++ b/apps/base/victoria-metrics-k8s-stack/kustomize.yaml
@@ -26,7 +26,7 @@ spec:
   targetNamespace: observability
   commonMetadata:
     labels:
-      service: *app
+      service: &app victoria-metrics
   dependsOn:
     - name: *app
   interval: 5m
