--- a/apps/base/grafana-operator/grafana/externalsecrets.yaml
+++ b/apps/base/grafana-operator/grafana/externalsecrets.yaml
@@ -99,9 +99,9 @@ spec:
     # this is how the Kind=Secret will look like
     template:
       data:
-        app_id: { { .app_id | toString } }
-        install_id: { { .install_id | toString } }
-        private_key: { { .private_key | toString } }
+        app_id: "{{ .app_id | toString }}"
+        install_id: "{{ .install_id | toString }}"
+        private_key: "{{ .private_key | toString }}"
 
   data:
     - secretKey: app_id
