--- a/apps/base/victoria-metrics-k8s-stack/release/helmrelease.yaml
+++ b/apps/base/victoria-metrics-k8s-stack/release/helmrelease.yaml
@@ -24,7 +24,7 @@ spec:
     vmcluster:
       enabled: true
       spec:
-        vstorage:
+        vmstorage:
           enabled: true
           replicaCount: 2
           storageDataPath: /vm-data
