disable vmagent and fix alloy config

--- a/apps/base/grafana-alloy/kustomize.yaml
+++ b/apps/base/grafana-alloy/kustomize.yaml
@@ -5,12 +5,10 @@ metadata:
   name: grafana-alloy
   namespace: flux-system
 spec:
-  targetNamespace: grafana-alloy
+  targetNamespace: observability
   commonMetadata:
     labels:
       service: grafana-alloy
-  dependsOn:
-    - name: prometheus
   interval: 5m
   path: ./apps/base/grafana-alloy/release
   prune: true
