--- a/apps/base/victoria-metrics-k8s-stack/release/helmrelease.yaml
+++ b/apps/base/victoria-metrics-k8s-stack/release/helmrelease.yaml
@@ -24,6 +24,8 @@ spec:
     vmcluster:
       enabled: true
       spec:
+        vmagent:
+          enabled: false
         vmstorage:
           enabled: true
           replicaCount: 2
