fix secret field ref

--- a/apps/base/grafana-operator/grafana/externalsecrets.yaml
+++ b/apps/base/grafana-operator/grafana/externalsecrets.yaml
@@ -100,7 +100,7 @@ spec:
     template:
       data:
         app_id: "{{ .app_id | toString }}"
-        install_id: "{{ .install_id | toString }}"
+        install_id: "{{ .installation_id | toString }}"
         private_key: "{{ .private_key | toString }}"
 
   data:
@@ -108,10 +108,10 @@ spec:
       remoteRef:
         key: grafana-github-datasource
         property: app_id
-    - secretKey: install_id
+    - secretKey: installation_id
       remoteRef:
         key: grafana-github-datasource
-        property: install_id
+        property: installation_id
     - secretKey: private_key
       remoteRef:
         key: grafana-github-datasource
