--- a/apps/base/grafana-operator/grafana/externalsecrets.yaml
+++ b/apps/base/grafana-operator/grafana/externalsecrets.yaml
@@ -100,7 +100,7 @@ spec:
     template:
       data:
         app_id: "{{ .app_id | toString }}"
-        install_id: "{{ .installation_id | toString }}"
+        installation_id: "{{ .installation_id | toString }}"
         private_key: "{{ .private_key | toString }}"
 
   data:
