fix private key ref

--- a/apps/base/grafana-operator/grafana/externalsecrets.yaml
+++ b/apps/base/grafana-operator/grafana/externalsecrets.yaml
@@ -115,4 +115,4 @@ spec:
     - secretKey: private_key
       remoteRef:
         key: grafana-github-datasource
-        property: private_key
+        property: grafana-github-j6nca.private-key.pem
