--- a/apps/base/grafana-operator/grafana/externalsecrets.yaml
+++ b/apps/base/grafana-operator/grafana/externalsecrets.yaml
@@ -101,7 +101,8 @@ spec:
       data:
         app_id: "{{ .app_id | toString }}"
         installation_id: "{{ .installation_id | toString }}"
-        private_key: "{{ .private_key | toString }}"
+        private_key: |
+          {{ .private_key | toString }}
 
   data:
     - secretKey: app_id
