fix file name lol

--- a/apps/base/grafana-operator/grafana/externalsecrets.yaml
+++ b/apps/base/grafana-operator/grafana/externalsecrets.yaml
@@ -102,7 +102,7 @@ spec:
         app_id: "{{ .app_id | toString }}"
         installation_id: "{{ .installation_id | toString }}"
         private_key: |
-          {{ .private_key | toString }}
+          {{ .private_key }}
 
   data:
     - secretKey: app_id
@@ -116,4 +116,4 @@ spec:
     - secretKey: private_key
       remoteRef:
         key: grafana-github-datasource
-        property: grafana-github-j6nca.private-key.pem
+        property: grafana-datasource-j6nca.private-key.pem
