--- a/apps/base/gatus/dashboards/kustomization.yaml
+++ b/apps/base/gatus/dashboards/kustomization.yaml
@@ -1,13 +1,15 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-configMapGenerator:
-- name: gatus-endpoints-dashboard
-  files:
-  - ../../../../dashboards/system/gatus_endpoints.json
+resources:
+  - ./dashboards.yaml
+# configMapGenerator:
+# - name: gatus-endpoints-dashboard
+#   files:
+#   - ../../../../dashboards/system/gatus_endpoints.json
 
-generatorOptions:
-  annotations:
-    grafana_folder: System
-  labels:
-    grafana_dashboard: "1"
+# generatorOptions:
+#   annotations:
+#     grafana_folder: System
+#   labels:
+#     grafana_dashboard: "1"
