--- a/apps/base/gatus/dashboards/kustomization.yaml
+++ b/apps/base/gatus/dashboards/kustomization.yaml
@@ -1,5 +1,16 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-
 resources:
   - ./dashboards.yaml
+
+configMapGenerator:
+- name: gatus-endpoints-dashboard
+  files:
+  - ../../../../dashboards/system/gatus_endpoints.json
+
+generatorOptions:
+  annotations:
+    grafana_folder: System
+  labels:
+    grafana_dashboard: "1"
+  disableNameSuffixHash: true
