--- a/apps/base/gatus/release/kustomization.yaml
+++ b/apps/base/gatus/release/kustomization.yaml
@@ -2,3 +2,15 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./helmrelease.yaml
+
+configMapGenerator:
+- name: gatus-endpoints-dashboard
+  files:
+  - ../../../../dashboards/system/gatus_endpoints.json
+
+generatorOptions:
+  annotations:
+    grafana_folder: System
+  labels:
+    grafana_dashboard: "1"
+  disableNameSuffixHash: true
