--- a/apps/base/gatus/dashboards/dashboards.yaml
+++ b/apps/base/gatus/dashboards/dashboards.yaml
@@ -8,6 +8,7 @@ spec:
     matchLabels:
       dashboards: homelab
   folder: "Services"
-  configMapRef: gatus-endpoints-dashboard
+  configMapRef:
+    name: gatus-endpoints-dashboard
 #   json: >
 # {{ .Files.Get "../../../../dashboards/system/gatus_endpoints.json" | indent 2 }}
