--- a/apps/base/gatus/dashboards/dashboards.yaml
+++ b/apps/base/gatus/dashboards/dashboards.yaml
@@ -1,7 +1,7 @@
 apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaDashboard
 metadata:
-  name: Gatus Endpoints
+  name: gatus-endpoints
   namespace: grafana-operator
 spec:
   instanceSelector:
