--- a/apps/base/gatus/dashboards/dashboards.yaml
+++ b/apps/base/gatus/dashboards/dashboards.yaml
@@ -10,5 +10,6 @@ spec:
   folder: "Services"
   configMapRef:
     name: gatus-endpoints-dashboard
+    key: gatus_endpoints.json
 #   json: >
 # {{ .Files.Get "../../../../dashboards/system/gatus_endpoints.json" | indent 2 }}
