--- a/apps/base/victoria-metrics-k8s-stack/storage/externalsecrets.yaml
+++ b/apps/base/victoria-metrics-k8s-stack/storage/externalsecrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: vmks-replication
+  name: vmks-0-replication
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
@@ -10,7 +10,42 @@ spec:
     creationPolicy: Owner
     template:
       data:
-        RESTIC_REPOSITORY: s3:{{ .bucket_endpoint | toString }}/vmks
+        RESTIC_REPOSITORY: s3:{{ .bucket_endpoint | toString }}/vmks-0
+        RESTIC_PASSWORD: "{{ .restic_password | toString }}"
+        AWS_ACCESS_KEY_ID: "{{ .cf_access_key_id | toString }}"
+        AWS_SECRET_ACCESS_KEY: "{{ .cf_access_key_secret | toString }}"
+
+  data:
+    - secretKey: bucket_endpoint
+      remoteRef:
+        key: volsync-r2
+        property: bucket_endpoint
+    - secretKey: restic_password
+      remoteRef:
+        key: volsync-r2
+        property: restic_password
+    - secretKey: cf_access_key_id
+      remoteRef:
+        key: volsync-r2
+        property: cf_access_key_id
+    - secretKey: cf_access_key_secret
+      remoteRef:
+        key: volsync-r2
+        property: cf_access_key_secret
+---
+apiVersion: external-secrets.io/v1
+kind: ExternalSecret
+metadata:
+  name: vmks-1-replication
+spec:
+  secretStoreRef:
+    kind: ClusterSecretStore
+    name: onepassword
+  target:
+    creationPolicy: Owner
+    template:
+      data:
+        RESTIC_REPOSITORY: s3:{{ .bucket_endpoint | toString }}/vmks-1
         RESTIC_PASSWORD: "{{ .restic_password | toString }}"
         AWS_ACCESS_KEY_ID: "{{ .cf_access_key_id | toString }}"
         AWS_SECRET_ACCESS_KEY: "{{ .cf_access_key_secret | toString }}"
