--- a/apps/base/volsync/dashboards/kustomization.yaml
+++ b/apps/base/volsync/dashboards/kustomization.yaml
@@ -2,12 +2,15 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 configMapGenerator:
-- name: datasource-status-dashboard
+- name: volsync-dashboard
   files:
-  - ../../../../dashboards/system/datasources_status.json
+  - ../../../../dashboards/storage/volsync.json
 
 generatorOptions:
   annotations:
-    grafana_folder: System
+    grafana_folder: Storage
   labels:
     grafana_dashboard: "1"
+
+resources:
+  - ./dashboards.yaml
