--- a/apps/base/volsync/kustomize.yaml
+++ b/apps/base/volsync/kustomize.yaml
@@ -17,3 +17,22 @@ spec:
   sourceRef:
     kind: GitRepository
     name: flux-system
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: volsync-dashboards
+  namespace: flux-system
+spec:
+  targetNamespace: observability
+  dependsOn:
+    - name: grafana-operator
+  commonMetadata:
+    labels:
+      service: volsync
+  interval: 5m
+  path: ./apps/base/volsync/dashboards
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
