--- a/apps/base/grafana-operator/dashboards/kustomization.yaml
+++ b/apps/base/grafana-operator/dashboards/kustomization.yaml
@@ -14,6 +14,7 @@ generatorOptions:
     grafana_folder: System
   labels:
     grafana_dashboard: "1"
+  disableNameSuffixHash: true
 
 resources:
   - ./dashboards.yaml
