enable vm dashboards with grafana operator

--- a/apps/base/grafana-operator/dashboards/dashboards.yaml
+++ b/apps/base/grafana-operator/dashboards/dashboards.yaml
@@ -26,3 +26,18 @@ spec:
   configMapRef:
     name: home-dashboard
     key: home.json
+---
+apiVersion: grafana.integreatly.org/v1beta1
+kind: GrafanaDashboard
+metadata:
+  name: grafana-operator
+  namespace: observability
+spec:
+  instanceSelector:
+    matchLabels:
+      dashboards: homelab
+  # Using empty object for dashboard in root folder.
+  folderRef: Kubernetes
+  configMapRef:
+    name: grafana-operator-dashboard
+    key: grafana-operator.json
