--- a/apps/base/victoria-metrics-k8s-stack/release/helmrelease.yaml
+++ b/apps/base/victoria-metrics-k8s-stack/release/helmrelease.yaml
@@ -47,3 +47,10 @@ spec:
     # Include dashboards from chart
     defaultDashboards:
       enabled: true
+      grafanaOperator:
+        # -- Create dashboards as CRDs (requires grafana-operator to be installed)
+        enabled: true
+        spec:
+          instanceSelector:
+            matchLabels:
+              dashboards: homelab
