--- a/apps/base/grafana-operator/dashboards/kustomization.yaml
+++ b/apps/base/grafana-operator/dashboards/kustomization.yaml
@@ -8,6 +8,9 @@ configMapGenerator:
 - name: home-dashboard
   files:
   - ../../../../dashboards/system/home.json
+- name: grafana-operator-dashboard
+  files:
+  - ../../../../dashboards/kubernetes/grafana-operator.json
 
 generatorOptions:
   annotations:
